Principas componentes do JSF

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,10 @@
     version="4.0">
 
 	<display-name>curso-jsf-e-primefaces-essencial</display-name>
+	
+	<welcome-file-list>
+		<welcome-file>GestaoEmpresas.xhtml</welcome-file>
+	</welcome-file-list>
 
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
